.dnl Process this file with autoconf to produce a configure script.
AC_INIT(cabextract.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(cabextract, 0.6)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_EXEEXT

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_TIME
AC_HEADER_DIRENT
AC_CHECK_HEADERS(ctype.h limits.h stdlib.h string.h strings.h \
	utime.h sys/stat.h sys/time.h sys/types.h getopt.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(strchr strcasecmp memcpy utime)
AC_REPLACE_FUNCS(mktime)

dnl check for getopt in standard library
AC_CHECK_FUNCS(getopt_long , , [LIBOBJS="$LIBOBJS getopt.o getopt1.o"] ) 

AC_OUTPUT(Makefile cabextract.spec)
